# flexible-graphrag

./: .gitignore  CHANGELOG.md  README.md  pytest.ini  zensical.toml
flexible-graphrag/: .dockerignore  Dockerfile  README.md  backend.py  check_elasticsearch.py  cleanup.py  config.py  document_processor.py  env-sample.txt  extras-overrides.txt  factories.py  hybrid_system.py  incremental_system.py  main.py  neptune_analytics_wrapper.py  neptune_database_wrapper.py  post_ingestion_state.py  pyproject.toml  query_engine.py  requirements.txt  retriever_setup.py  schema_manager.py  start.py  uv.toml
flexible-graphrag-mcp/: QUICK-USAGE-GUIDE.md  README.md  main.py  pyproject.toml
flexible-graphrag/adapters/: __init__.py
flexible-graphrag/adapters/graph/: __init__.py  pg_store_adapter.py  rdf_store_adapter.py
flexible-graphrag/adapters/llm/: __init__.py  llm_adapter.py
flexible-graphrag/adapters/process/: __init__.py  chunker_adapter.py  kg_extractor_adapter.py
flexible-graphrag/adapters/search/: __init__.py  search_store_adapter.py
flexible-graphrag/adapters/vector/: __init__.py  vector_store_adapter.py
flexible-graphrag/incremental_updates/: API-REFERENCE.md  GCS-SETUP.md  QUICKSTART.md  S3-SETUP.md  __init__.py  config_manager.py  datasource-queries.sql  diagnostic_queries.sql  engine.py  logging_config.py  orchestrator.py  path_utils.py  s3_helpers.py  schema.sql  state_manager.py
flexible-graphrag/incremental_updates/detectors/: README.md  __init__.py  alfresco_broadcaster.py  alfresco_detector.py  azure_blob_detector.py  base.py  box_detector.py  factory.py  filesystem_detector.py  gcs_detector.py  google_drive_detector.py  msgraph_detector.py  s3_detector.py
flexible-graphrag/ingest/: __init__.py  _helpers.py  factory.py  ingest_from_files.py  ingest_from_source.py  ingest_from_text.py  ingest_lc_graph.py  manager.py  run_chunk_pipeline.py  update_pg_graph.py  update_rdf_graph.py  update_search.py  update_vector.py
flexible-graphrag/langchain/: __init__.py  langchain-requirements.txt  retriever_bridge.py  utils.py
flexible-graphrag/langchain/graph/: __init__.py  langchain_retriever_wrapper.py  logging_retriever.py  neighborhood_retriever.py  neo4j_vector_retriever.py  pg_retriever_factory.py  pg_store_adapter.py  rdf_store_adapter.py  synonym_fusion.py  synonym_rewriter.py
flexible-graphrag/langchain/graph/langchain_adapters/: __init__.py  fuseki_langchain_adapter.py  graphdb_langchain_adapter.py  neptune_rdf_adapter.py  oxigraph_langchain_adapter.py  property_graph_adapters.py
flexible-graphrag/langchain/graph/pg_store_adapters/: __init__.py  apache_age_adapter.py  arangodb_adapter.py  arcadedb_lc_adapter.py  cosmos_gremlin_adapter.py  factory.py  falkordb_adapter.py  hugegraph_adapter.py  ladybug_adapter.py  memgraph_adapter.py  nebula_adapter.py  neo4j_adapter.py  neptune_pg_adapter.py  spanner_adapter.py  surrealdb_adapter.py  tigergraph_adapter.py
flexible-graphrag/langchain/graph/rdf_store_adapters/: __init__.py  fuseki_langchain_adapter.py  graphdb_langchain_adapter.py  neptune_rdf_adapter.py  oxigraph_langchain_adapter.py
flexible-graphrag/langchain/graph/retrievers/: __init__.py  lc_graph_retriever.py  lc_logging_retriever.py  lc_neighborhood_retriever.py  lc_neo4j_vector_retriever.py  lc_synonym_retriever.py  li_graph_query_retriever.py  li_logging_retriever.py  li_neighborhood_retriever.py  li_neo4j_vector_retriever.py  li_synonym_retriever.py  synonym_fusion.py  synonym_rewriter.py
flexible-graphrag/langchain/llm/: __init__.py  embedding_adapter.py  embedding_factory.py  llm_adapter.py  llm_factory.py
flexible-graphrag/langchain/process/: __init__.py  chunker_adapter.py  kg_extractor_adapter.py
flexible-graphrag/langchain/search/: __init__.py  lc_search_retriever.py  li_search_retriever.py  retriever.py  search_store_adapter.py
flexible-graphrag/langchain/search/adapters/: __init__.py  bm25_adapter.py  elasticsearch_adapter.py  factory.py  opensearch_adapter.py
flexible-graphrag/langchain/vector/: __init__.py  lc_vector_retriever.py  li_vector_retriever.py  retriever.py  vector_store_adapter.py
flexible-graphrag/langchain/vector/adapters/: __init__.py  chroma_adapter.py  elasticsearch_adapter.py  factory.py  lancedb_adapter.py  milvus_adapter.py  neo4j_adapter.py  opensearch_adapter.py  pinecone_adapter.py  postgres_adapter.py  qdrant_adapter.py  weaviate_adapter.py
flexible-graphrag/llamaindex/: __init__.py
flexible-graphrag/llamaindex/graph/: __init__.py  graph_store_factory.py  pg_adapter.py
flexible-graphrag/llamaindex/graph/adapters/: __init__.py  arcadedb_adapter.py  factory.py  falkordb_adapter.py  falkordb_param_patch.py  nebula_adapter.py  (+6 more)
flexible-graphrag/llamaindex/llm/: __init__.py  embedding_adapter.py  embedding_factory.py  llm_adapter.py  llm_factory.py
flexible-graphrag/llamaindex/process/: __init__.py  chunker_adapter.py  kg_extractor_adapter.py
flexible-graphrag/llamaindex/search/: __init__.py  search_store_factory.py
flexible-graphrag/llamaindex/vector/: __init__.py  vector_store_factory.py
flexible-graphrag/observability/: __init__.py  custom_hooks.py  metrics.py  telemetry_openlit.py  telemetry_setup.py
flexible-graphrag/process/: __init__.py  document_processor.py  kg_extractor.py  node_pipeline.py
flexible-graphrag/rdf/: __init__.py  api_rdf_enhancements.py  kg_to_rdf_converter.py  ontology_manager.py  sparql_ontology_loader.py  sparql_property_graph_wrapper.py  unified_query_engine.py
flexible-graphrag/rdf/schemas/: company_classes.ttl  company_ontology.ttl  company_properties.ttl  foaf_ontology.ttl
flexible-graphrag/rdf/store/: __init__.py  fuseki_rdf_store_adapter.py  ontotext_graphdb_rdf_store_adapter.py  oxigraph_rdf_store_adapter.py  rdf_store_adapter.py  rdf_store_factory.py
flexible-graphrag/sources/: __init__.py  alfresco.py  azure_blob.py  base.py  box.py  cmis.py  filesystem.py  gcs.py  google_drive.py  onedrive.py  passthrough_extractor.py  s3.py  sharepoint.py  web.py  wikipedia.py  youtube.py
flexible-graphrag/stores/: __init__.py  index_manager.py  rdf_manager.py
(+343 files in other folders)
