[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flexible-graphrag-mcp"
version = "0.4.0"
description = "MCP Server for Flexible GraphRAG"
readme = "README.md"
license = "Apache-2.0"
authors = [
    {name = "Steve Reiner"}
]
dependencies = [
    "fastmcp",
    "nest-asyncio", 
    "httpx",
    "python-dotenv"
]

[project.scripts]
flexible-graphrag-mcp = "main:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "black", 
    "flake8"
]

[tool.setuptools]
py-modules = ["main"]
