[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flexible-graphrag-mcp"
version = "0.6.3"
description = "MCP server for Flexible GraphRAG — connects to the FastAPI backend (status, ingest, hybrid search, AI Q&A) for Claude Desktop and other MCP clients. Supports 13 data sources, 15 property graph DBs, 4 RDF triple stores, 10 vector DBs, LlamaIndex + LangChain"
readme = "README.md"
requires-python = ">=3.12,<3.15"
license = "Apache-2.0"
authors = [
    {name = "Steve Reiner"}
]
keywords = [
    "mcp",
    "mcp-server",
    "model-context-protocol",
    "fastapi",
    "graphrag",
    "rag",
    "llm",
    "fastmcp",
    "claude",
    "knowledge-graph",
    "property-graph",
    "neo4j",
    "hybrid-search",
    "vector-database",
    "search",
    "ai",
    "alfresco",
    "sparql",
    "rdf",
    "ontology",
    "llamaindex",
    "langchain",
    "neptune",
    "incremental-sync",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Database",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastmcp",
    "httpx",
    "python-dotenv"
]

[project.urls]
Homepage = "https://github.com/stevereiner/flexible-graphrag"
Documentation = "https://stevereiner.github.io/flexible-graphrag/"
Repository = "https://github.com/stevereiner/flexible-graphrag"
Changelog = "https://github.com/stevereiner/flexible-graphrag/blob/main/CHANGELOG.md"
Issues = "https://github.com/stevereiner/flexible-graphrag/issues"

[project.scripts]
flexible-graphrag-mcp = "main:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8"
]

[tool.setuptools]
py-modules = ["main"]
