[project]
name = "flexible-graphrag"
version = "0.6.0"
description = "Flexible GraphRAG system supporting multiple LLM providers, graph databases, vector stores, and data sources"
readme = "README.md"
requires-python = ">=3.12,<3.15"
license = "Apache-2.0"
authors = [
    {name = "Steve Reiner"}
]
keywords = [
    "graphrag",
    "rag",
    "ai-context-platform",
    "ai-agents",
    "llm",
    "knowledge-graph",
    "property-graph",
    "neo4j",
    "arcadedb",
    "falkordb",
    "ladybugdb",
    "llamaindex",
    "langchain",
    "fastapi",
    "sparql",
    "rdf",
    "ontology",
    "owl",
    "fuseki",
    "graphdb",
    "oxigraph",
    "neptune",
    "semantic-search",
    "vector-database",
    "qdrant",
    "search-database",
    "hybrid-search",
    "elasticsearch",
    "opensearch",
    "incremental-sync",
    "mcp",
    "mcp-server",
    "document-processing",
    "docling",
    "llamaparse",
    "alfresco",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Database",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "fastapi",
    "uvicorn",
    "python-multipart",
    "fastmcp",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "python-dotenv",
    "nest-asyncio",
    "wikipedia",
    "cmislib",
    "python-alfresco-api>=1.1.5",
    "docling-slim[standard]",
    "llama-parse<1.0",       # 1.0 API (0.6.x); llama-cloud must stay <2.0 — see below
    "llama-cloud<2.0",       # 0.1.x required by llama-cloud-services 0.6.x; 2.x is new unified SDK (TODO: migrate later)
    "neo4j",
    "numpy",
    "rapidfuzz",
    "spacy",
    "openai",
    "ollama",
    "pydantic",
    "pydantic-settings",
    # LlamaIndex core and integrations
    "llama-index-core",
    "llama-index-llms-openai",
    "llama-index-llms-ollama",
    "llama-index-llms-google-genai",
    "llama-index-llms-azure-openai",
    "llama-index-llms-anthropic",
    # Vertex removed - use google-genai for Vertex AI
    "llama-index-llms-bedrock-converse",
    "llama-index-llms-groq",
    "llama-index-llms-fireworks",
    "llama-index-llms-openai-like",
    "llama-index-llms-vllm",
    "llama-index-llms-litellm",
    "llama-index-llms-openrouter",
    "llama-index-embeddings-openai",
    "llama-index-embeddings-ollama",
    "llama-index-embeddings-google-genai",
    "llama-index-embeddings-azure-openai",
    # Vertex embeddings removed - use google-genai for Vertex AI
    "llama-index-embeddings-bedrock",
    "llama-index-embeddings-fireworks",
    "llama-index-embeddings-openai-like",
    "llama-index-embeddings-litellm",
    "llama-index-vector-stores-neo4jvector",
    "llama-index-vector-stores-qdrant",
    "llama-index-vector-stores-elasticsearch",
    "llama-index-vector-stores-opensearch",
    "llama-index-vector-stores-chroma",
    "llama-index-vector-stores-milvus",
    "llama-index-vector-stores-weaviate",
    "llama-index-vector-stores-pinecone",
    "llama-index-vector-stores-postgres",
    "llama-index-vector-stores-lancedb",
    "llama-index-graph-stores-neo4j",
    "llama-index-graph-stores-falkordb",
    "llama-index-graph-stores-memgraph",
    "llama-index-graph-stores-nebula",
    "nebula3-python>=3.8.3",        # direct dep: DDL in nebula_adapter._ensure_space_and_schema
    "llama-index-graph-stores-neptune",
    # Ladybug graph database dependencies
    "ladybug>=0.16.1",
    "llama-index-graph-stores-ladybug>=0.3.3",
    "llama-index-retrievers-bm25",
    # ArcadeDB graph database dependencies
    "arcadedb-python>=0.4.0",
    "llama-index-graph-stores-arcadedb>=0.4.4",
    # "arcadedb-embedded>=26.3.2",
    # Search / Vector database dependencies
    "elasticsearch",
    "opensearch-py",
    # Vector database client libraries
    "qdrant-client",
    "chromadb",
    "pymilvus",
    "weaviate-client",
    "psycopg2-binary",
    "lancedb",
    "pinecone",
    # Data Source LlamaIndex Reader dependencies
    "llama-index-readers-web",
    "llama-index-readers-wikipedia",
    "llama-index-readers-youtube-transcript",
    "youtube_transcript_api",
    "llama-index-readers-s3",
    "llama-index-readers-gcs",
    "llama-index-readers-google",
    "llama-index-readers-azstorage-blob",
    "llama-index-readers-microsoft-onedrive",
    "llama-index-readers-microsoft-sharepoint",
    "llama-index-readers-box",
    "llama-index-readers-file",
    "box-sdk-gen>=1.17.0",  # Box SDK for CCG authentication (requires AiItemBase)
    "s3fs",
    "boto3",
    # Cloud SDK dependencies
    "google-cloud-storage",
    "google-api-python-client",
    "google-auth-httplib2",
    "google-auth-oauthlib",
    "azure-storage-blob",
    # Incremental Updates dependencies
    "asyncpg>=0.29.0",  # PostgreSQL async driver for state management
    "watchdog>=4.0.0",  # Filesystem change detection
    # Additional auto-sync dependencies for new detectors
    "google-cloud-pubsub>=2.18.0",  # GCS Pub/Sub notifications
    "azure-storage-blob-changefeed>=12.0.0b5",  # Azure Blob change feed (beta)
    # box-sdk-gen already included above for BoxReader - used for Box detector too
    "msgraph-sdk>=1.0.0",  # Microsoft Graph SDK for OneDrive/SharePoint
    "azure-identity>=1.14.0",  # Azure AD authentication for Microsoft Graph
    # RDF and Ontology Support
    "rdflib>=7.0.0",
    "pyoxigraph>=0.3.20",
    "requests>=2.31.0",
]

[project.optional-dependencies]
# Observability dependencies (optional - for OpenTelemetry/Prometheus/Grafana monitoring)
# 
# Three installation options:
# 1. OpenInference only (default): pip install .[observability]
# 2. OpenLIT only: pip install .[observability-openlit]
# 3. DUAL mode (RECOMMENDED): pip install .[observability-dual]
#
observability = [
    "openinference-instrumentation-llama-index",
    "openinference-instrumentation-langchain",
    "opentelemetry-exporter-otlp",
    "opentelemetry-sdk",
    "opentelemetry-api",
]

# OpenLIT observability (alternative - includes token metrics out-of-the-box)
observability-openlit = [
    "openlit>=1.41.2",
    "opentelemetry-exporter-otlp",
    "opentelemetry-sdk",
    "opentelemetry-api",
]

# DUAL mode observability (RECOMMENDED - best of both worlds!)
# Includes both OpenInference (rich traces) + OpenLIT (token metrics, costs)
observability-dual = [
    "openinference-instrumentation-llama-index",
    "openinference-instrumentation-langchain",
    "openlit>=1.41.2",  # 1.41.2+ no longer downgrades openai
    "opentelemetry-exporter-otlp",
    "opentelemetry-sdk",
    "opentelemetry-api",
]

dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "black",
    "ruff",
    "mypy",
]

# RDF and Ontology optional dependencies (for advanced semantic web features)
rdf = [
    "rdflib>=7.0.0",
    "pyoxigraph>=0.3.20",
    "requests>=2.31.0",
]

# Complete RDF stack with all store adapters
rdf-full = [
    "rdflib>=7.0.0",
    "pyoxigraph>=0.3.20",
    "requests>=2.31.0",
    "SPARQLWrapper>=2.0.0",  # For advanced SPARQL queries
]

# LangChain integration — LLM providers, KG extraction, BM25, vector stores.
# Install: uv pip install -e ".[langchain]"
# Zero downgrades on top of a clean base install.
langchain = [
    # Core — pin to 1.x (langchain 0.3.x would downgrade everything)
    "langchain>=1.0",
    "langchain-community>=0.4",   # Shared community integrations
    # LLM providers — mirrors LlamaIndex provider list
    "langchain-openai",           # OpenAI, Azure OpenAI, vLLM, openai_like, LiteLLM, OpenRouter
    "langchain-anthropic>=1.3",   # Anthropic Claude
    "langchain-aws",              # AWS Bedrock (ChatBedrock) + Amazon Neptune RDF/PG
    "langchain-ollama>=1.0",      # Ollama local models
    # langchain-google-genai>=4.0 covers BOTH Gemini API and Vertex AI (ChatGoogleGenerativeAI
    # selects backend via API key vs GCP credentials) — langchain-google-vertexai deprecated for LLMs
    "langchain-google-genai>=4.0",
    "langchain-groq>=1.1",        # Groq
    "langchain-fireworks>=1.0",   # Fireworks AI
    # langchain-neo4j: moved to [langchain-extras] — hard-depends on neo4j-graphrag which pins
    #   fsspec<2025, downgrading fsspec/gcsfs/s3fs 2025.x -> 2024.x
    # Vector stores (LangChain-backed) — no fsspec/pgvector impact
    "langchain-qdrant",           # Qdrant vector store
    "langchain-milvus",           # Milvus vector store
    "langchain-weaviate",         # Weaviate vector store
    "langchain-pinecone",         # Pinecone vector store
    "langchain-chroma",           # ChromaDB vector store
    "langchain-elasticsearch",    # Elasticsearch vector + search store
    # OpenSearch: uses langchain-community (OpenSearchVectorSearch) — no separate package needed
    # langchain-postgres: moved to [langchain-extras] — pins pgvector<0.4 (downgrades pgvector)
    # KG extraction
    "langchain-experimental",     # LLMGraphTransformer (kg extractor)
    # BM25 search
    "rank-bm25",                  # BM25SearchAdapter (langchain_community.retrievers.BM25Retriever)
    "langchain-ladybug>=0.3.0"
]
   
# Extended LangChain — graph database backends + stores with known transitive downgrades.
# Install: uv pip install -e ".[langchain,langchain-extras]"
#
# Known downgrades vs clean base + [langchain]:
#   langchain-neo4j    -> neo4j-graphrag (hard dep) -> fsspec<2025 => fsspec/gcsfs/s3fs 2025.x -> 2024.x
#   langchain-postgres -> pgvector<0.4              => pgvector 0.4.x -> 0.3.x
#
# To keep fsspec/gcsfs/s3fs at their current releases (constraint is advisory only,
# newer versions work at runtime), use the extras-overrides.txt file:
#   uv pip install --override extras-overrides.txt -e ".[langchain,langchain-extras]"
# This also restores pgvector to its current release after langchain-postgres pins it back.
#
# langchain-google-spanner: requires langchain-core<1.0 — incompatible with langchain>=1.0.
#   Latest release is 0.9.0; no version supports langchain-core>=1.0 yet.
#   When a compatible version is released: add to langchain-extras and update
#   DATABASE-CONFIGURATION.md / CONFIG-PROPERTY-GRAPH.md counts (LI-only -> both LI+LC).
# langchain-surrealdb>=0.2.0: ships SurrealDBGraph + SurrealDBGraphQAChain.
#   Pins surrealdb==1.0.8, langchain-core==1.1.3, and several llama-index/fsspec
#   packages at older versions; use extras-overrides.txt to suppress (see surrealdb-extras group).

langchain-extras = [
    "langchain-neo4j",            # Neo4j property graph + vector index
    "langchain-postgres",         # PostgreSQL (pgvector) vector store
    "langchain-arcadedb",
    "langchain-arangodb",         # ArangoDB property graph
    "gremlinpython>=3.7.0",       # Azure Cosmos DB Gremlin API / local TinkerPop
    "azure-mgmt-cosmosdb>=9.5.0", # Cosmos DB management plane (auto-create Gremlin containers)
    "hugegraph-python>=1.5.0",    # HugeGraph graph database (installs pyhugegraph module)
    "pyTigerGraph>=1.0.0",        # TigerGraph (required by langchain_community.graphs.TigerGraph)
    "requests-aws4auth>=1.2.0",   # Neptune bulk loading with IAM auth
    "SPARQLWrapper>=2.0.0",       # Advanced SPARQL queries against RDF stores
    "litellm>=1.81",              # floor-pin: prevent langchain-arangodb transitive downgrade
]

# Docling OCR extras — only needed for scanned PDFs or image files (DOCLING_OCR=true).
# rapidocr is already in docling-slim[standard] — no extra install needed.
# tesseract_cli and auto engines need no extra Python install (auto uses what is installed).
# Engines: auto | rapidocr | easyocr | tesserocr | tesseract_cli | ocrmac (macOS only)
#
# docling-ocr-tesserocr: compiles C++ extension against Tesseract. On Windows this often fails
#   (PATH must include tesseract.exe during pip build; MSVC + dev libs needed). Prefer engine
#   tesseract_cli + system Tesseract only—no this extra. Linux: apt install tesseract-ocr
#   libtesseract-dev libleptonica-dev build-essential
docling-ocr-easyocr = [
    "docling-slim[feat-ocr-easyocr]",
]
docling-ocr-tesserocr = [
    "docling-slim[feat-ocr-tesserocr]",
]
docling-ocr-ocrmac = [
    "docling-slim[feat-ocr-mac]",  # macOS only
]

# SurrealDB — langchain-surrealdb 0.2.x pins surrealdb==1.0.8, langchain-core==1.1.3,
# and several llama-index-*/fsspec packages at older versions.  Use extras-overrides.txt
# to suppress the downgrades, then upgrade surrealdb and langchain-core afterwards:
#   uv pip install --override extras-overrides.txt -e ".[surrealdb-extras]"
#   uv pip install "surrealdb>=2.0" "langchain-core>=1.3"
surrealdb-extras = [
    "langchain-surrealdb>=0.2.0", # SurrealDB LangChain integration (graph QA chain)
]

# Apache AGE — langchain-age is the BAEM1N package (https://github.com/BAEM1N/langchain-age).
# The package bundles the Apache AGE Python driver under langchain_age/_vendor/age/, including
# ANTLR4-generated grammar files from the official apache/age repo (drivers/Agtype.g4).
# The ANTLR tool generates int-list ATN data (version 4), but antlr4-python3-runtime
# sets SERIALIZED_VERSION=3 and on Python 3.14 has stricter int handling — patch required:
#   uv pip install --override flexible-graphrag/extras-overrides.txt -e "flexible-graphrag[langchain,langchain-extras,age-extras]"
#   python scripts/patch_langchain_age.py   (required on Python 3.14+; harmless on 3.12/3.13)
age-extras = [
    "langchain-age==0.1.2",
]

# Google Cloud Spanner LlamaIndex integration.
# Does NOT downgrade core packages (unlike langchain-google-spanner which requires langchain-core<1.0).
# llama-index-spanner declares llama-index (meta-package) as a dependency; that meta-package
# pins llama-index-* component packages at older versions.  Use extras-overrides.txt to
# suppress the downgrades, then remove the meta-package afterwards:
#   uv pip install --override extras-overrides.txt -e ".[spanner-extras]"
#   uv pip uninstall llama-index
spanner-extras = [
    "llama-index-spanner>=0.1.5",  # LlamaIndex SpannerPropertyGraphStore
    "google-cloud-spanner",        # GCP Spanner client (required by llama-index-spanner)
]

[project.urls]
Homepage = "https://github.com/stevereiner/flexible-graphrag"
Documentation = "https://stevereiner.github.io/flexible-graphrag/"
Repository = "https://github.com/stevereiner/flexible-graphrag"
Changelog = "https://github.com/stevereiner/flexible-graphrag/blob/main/CHANGELOG.md"
Issues = "https://github.com/stevereiner/flexible-graphrag/issues"

[project.scripts]
flexible-graphrag = "start:main"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# Flat layout - Python files are in the same directory as pyproject.toml
py-modules = [
    "backend",
    "config",
    "factories",
    "hybrid_system",
    "incremental_system",
    "main",
    "post_ingestion_state",
    "query_engine",
    "retriever_setup",
    "schema_manager",
    "start",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ingest*", "process*", "sources*", "observability*", "incremental_updates*", "rdf*", "langchain*", "stores*", "llamaindex*"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md", "*.sql", "*.toml"]

[tool.setuptools.data-files]
"." = [
    "Dockerfile",
    "env-sample.txt",
    "uv.toml",
    "extras-overrides.txt",
]

[tool.pytest.ini_options]
testpaths = ["../tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"

[tool.black]
line-length = 120
target-version = ["py312"]
include = '\.pyi?$'

[tool.ruff]
line-length = 120
target-version = "py312"
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4"]
ignore = ["E501", "B008"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.uv]
# Manual venv management - prevents uv from automatically creating .venv
# See uv.toml for detailed documentation about venv management options
managed = false

